apps/synapse/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 8008
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/name: synapse
