apps/synapse/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: synapse
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hermes-agent
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-discord
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-googlechat
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-linkedin
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-meta
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-signal
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-slack
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-twitter
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mautrix-whatsapp
      ports:
        - port: https
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: synapse
      app.kubernetes.io/name: synapse
  policyTypes:
    - Ingress
